# oss-ai-stack-map

./: .gitignore  AGENTS.md  ARCHITECTURE.md  AUTORESEARCH-PLAN.md  README.md  SPEC.md  pyproject.toml
config/: benchmark_entities.yaml  discovery_topics.yaml  entities.yaml  exclusion_rules.yaml  segment_rules.yaml  study_config.yaml  technology_aliases.yaml  technology_registry.yaml
docs/: api-serving-strategy-2026-03-29.md  dependency-gap-opportunities-2026-03-28.md  descriptive-statistics-2026-03-25.md  explainer.html  external-evaluation-2026-03-26.md  methodology.md  networkx-analysis-2026-03-25.md  oss-ai-stack-report-2026-03-25-1mo-v1.html  oss-ai-stack-report-2026-03-25-v10.html  oss-ai-stack-report-2026-03-25-v11.html  oss-ai-stack-report-2026-03-25-v12.html  oss-ai-stack-report-2026-03-25-v13.html  oss-ai-stack-report-2026-03-25-v14.html  oss-ai-stack-report-2026-03-25-v15.html  oss-ai-stack-report-2026-03-25-v16.html  oss-ai-stack-report-2026-03-25-v5.html  oss-ai-stack-report-2026-03-25-v6.html  oss-ai-stack-report-2026-03-25-v7.html  oss-ai-stack-report-2026-03-25-v8.html  oss-ai-stack-report-2026-03-25-v9.html  oss-ai-stack-report-2026-03-25.html  oss-ai-stack-report-2026-03-29-v1.html  oss-ai-stack-report-2026-03-29-v2.html  oss-ai-stack-report-2026-03-29-v3.html  oss-ai-stack-report-2026-03-30-v1.html  oss-ai-stack-report-2026-03-30-v3.html  oss-ai-stack-report-2026-03-30-v4.html  oss-ai-stack-report-2026-03-31-v1.html  oss-ai-stack-report-2026-03-31-v2.html  oss-ai-stack-report-2026-03-31-v3.html  oss-ai-stack-report-2026-03-31-v4.html  (+11 more)
(+614 files in other folders)
